--- a/src/app/components/main-form/main-form.component.html
+++ b/src/app/components/main-form/main-form.component.html
@@ -124,34 +124,34 @@
                 <div class="row" *ngIf="divFields">
                   <div class="col-md-12">
                       <div class="" *ngIf="previewInpField">
-                          <a  style="float:right;" id="pointerAdd" class="text-primary" (click)="addNewRow()" ><i class="fa fa-plus"></i></a>
+                          <a  style="float:right;" id="pointerAdd" class="text-primary" (click)="addNewRow()" ><i class="fa fa-plus"></i><span>ADD ROW</span></a>
                         <div  formArrayName="itemRows">
 
                         <div class="row" *ngFor="let checks of invoiceForm.controls.itemRows.controls; let i=index"  [formGroupName]="i">
                             <h6>{{fieldLabel}} {{ i + 1 }}</h6>
                             <div class="input-group">
                             <div class="col-md-2" *ngIf="maleInput">
-                                <label class="control-label">M</label>
+                                <label class="labelCenter control-label">M</label>
                                 <input type="{{previewInputType}}"  formControlName="maleinputval" class="form-control inphight " />
                               </div>
                              <div class="col-md-2" *ngIf="femaleInput">
-                                <label class="control-label">F</label>
+                                <label class="labelCenter control-label">F</label>
                                 <input type="{{previewInputType}}" formControlName="femaleinputval"  class="form-control inphight" />
                                </div>
                                <div class="col-md-2" *ngIf="othersInput">
-                                  <label class="control-label">O</label>
+                                  <label class="labelCenter control-label">O</label>
                                   <input type="{{previewInputType}}" formControlName="othersinputval" class="form-control inphight" />
                                  </div>
                                  <div class="col-md-2" *ngIf="cmcfinpt">
-                                    <label class="control-label">CM</label>
+                                    <label class="labelCenter control-label">CM</label>
                                     <input type="{{previewInputType}}" formControlName="cminputval" class="form-control inphight" />
                                   </div>
                                   <div class="col-md-2" *ngIf="cmcfinpt">
-                                      <label class="control-label">CF</label>
+                                      <label class="labelCenter control-label">CF</label>
                                       <input type="{{previewInputType}}" formControlName="cfinputval" class="form-control inphight" />
                                   </div>
                                   <div class="col-md-2" *ngIf="totalinput">
-                                        <label class="control-label">T</label>
+                                        <label class="labelCenter control-label">T</label>
                                         <input type="{{previewInputType}}" formControlName="totalinputval" class="form-control inphight" />
                                   </div>
                                   <span  class="input-group-btn">
