--- a/src/app/components/main-form/main-form.component.css
+++ b/src/app/components/main-form/main-form.component.css
@@ -12,7 +12,7 @@ a{
 }
 
 .labelCenter{
-padding-left: 25px
+padding-left: 30px
 }
 .typeInput{
   padding-left:50px;
@@ -31,7 +31,14 @@ padding-left: 25px
   height:30px;
 }
 
+.SmallInput { width: 80px;
+  height: 20px;
+  font-size: 14px !important;
+}
 
+.card{
+  border-left: 5px solid #6FF1A6
+}
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
