--- a/src/app/components/main-form/main-form.component.css
+++ b/src/app/components/main-form/main-form.component.css
@@ -37,7 +37,8 @@ padding-left: 30px
 }
 
 .card{
-  border-left: 5px solid #6FF1A6
+  border-left: 5px solid #6FF1A6;
+  margin: 15px 0;
 }
 
 input[type=number]::-webkit-inner-spin-button,
